Applicaton_Test_2/Kubernetes Manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asiayo
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
