Applicaton_Test_2/Kubernetes Manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asiayo-app
  namespace: asiayo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: asiayo-app
