Applicaton_Test_2/Kubernetes Manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asiayo-app
  namespace: asiayo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: asiayo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asiayo-app
            port:
              number: 80
